    - debian/patches/localedata/local-all-no-archive.diff: Rebased.
    - debian/patches/localedata/submitted-locale-bo.diff: Rebased.
    - debian/patches/mips/submitted-rld_map.diff: Rebased.
  * debian/{control,symbols.wildcards,copyright}: Updated strings for 2.22.
  * debian/libc6*.symbols: Add libmvec.so.1 to the amd64/x32 symbols files.

  [ Samuel Thibault ]
  * debian/patches/hurd-i386/tg-tls.diff: Rebased.
  * debian/patches/hurd-i386/tg-tls-threadvar.diff: Rebased.
  * debian/patches/hurd-i386/tg-ioctl-base-types.diff: Upstreamed.
  * debian/patches/hurd-i386/tg-extern_inline.diff: Rebased.
  * debian/patches/hurd-i386/tg-aio_misc.diff: Upstreamed.
  * debian/patches/hurd-i386/tg-chflags.diff: Upstreamed.
  * debian/patches/hurd-i386/tg-select-EINTR.diff: Upstreamed.
  * debian/patches/hurd-i386/tg-af_local_strlen.diff: Upstreamed.
  * debian/patches/hurd-i386/tg-nice.diff: Upstreamed.
  * debian/patches/hurd-i386/tg-nfds-poll.diff: Upstreamed.
  * debian/patches/hurd-i386/tg-sigstate_locking.diff: Upstreamed.
  * debian/patches/hurd-i386/tg-mmap_file_prot_none_fix.diff: Upstreamed.
  * debian/patches/hurd-i386/cvs-unwind-resume.diff: Upstreamed.
  * debian/patches/hurd-i386/cvs-libc-modules.h.diff: Upstreamed.
  * debian/patches/hurd-i386/cvs-warnings.diff: Upstreamed.
  * debian/patches/hurd-i386/cvs-check-local-headers.diff: Upstreamed.
  * debian/patches/hurd-i386/cvs-mlock.diff: Upstreamed.
  * debian/patches/hurd-i386/cvs-csu_crt0.diff: New patch, fixes gcrt0.o
    build.
  * debian/patches/hurd-i386/cvs-s_scalbn.diff: New patch, fixes s_scalbn.S
    build.
  * debian/patches/hurd-i386/tg-tls-threadvar.diff: Update.

 -- Adam Conrad <adconrad@0c3.net>  Tue, 15 Sep 2015 17:57:41 -0600

glibc (2.21-0experimental2) UNRELEASED; urgency=medium

  [ Samuel Thibault ]
  * Symbol versions which contain _DEBIAN_ are unexpected by upstream scripts.
    Add hurd-i386-only patches/hurd-i386/local-versions-hack.diff to work