@@ -2,6 +2,8 @@
 TMPDIR/SLIBDIR/ld*.so* lib
 TMPDIR/SLIBDIR/libm-*.so* lib
 TMPDIR/SLIBDIR/libm.so* lib
+TMPDIR/SLIBDIR/libmvec-* lib
+TMPDIR/SLIBDIR/libmvec.so* lib
 TMPDIR/SLIBDIR/libdl*.so* lib
 TMPDIR/SLIBDIR/libresolv*.so* lib
 TMPDIR/SLIBDIR/libc-*.so* lib
