@@ -36,7 +36,7 @@ W="[^[:space:]]*"
 # The following lists should match the ones in the *-udeb.install files
 # in debian/debhelper.in; $W replaces any "*" wildcards there.
 expr_libc1="ld$W libm-$W libm libdl$W libresolv$W libc-$W libc"
-expr_libc2="libutil$W libcrypt$W librt$W libpthread$W"
+expr_libc2="libutil$W libcrypt$W librt$W libpthread$W libmvec$W"
 expr_hurd="libmachuser$W libhurduser$W"
 expr_nss_dns="libnss_dns$W"
 expr_nss_files="libnss_files$W"
