@@ -37,6 +37,7 @@ glibc (2.22-0experimental0) UNRELEASED; urgency=medium
     - debian/patches/mips/submitted-rld_map.diff: Rebased.
   * debian/{control,symbols.wildcards,copyright}: Updated strings for 2.22.
   * debian/libc6*.symbols: Add libmvec.so.1 to the amd64/x32 symbols files.
+  * debian/*: Conditionally add libmvec to libc-udeb only on amd64 and x32.
 
   [ Samuel Thibault ]
   * debian/patches/hurd-i386/tg-tls.diff: Rebased.
